--- a/jordanbeach/static_src/scss/styles.scss
+++ b/jordanbeach/static_src/scss/styles.scss
@@ -1,3 +1,5 @@
+// Hero
+
 .fullscreen-bg {
     position: fixed;
     top: 0;
@@ -9,13 +11,56 @@
 }
 
 .fullscreen-bg__video {
+    display: block;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 50%;
+    top: 0%;
+    left: 50%;
+    width: auto;
+    height: auto;
+    min-width: 100%;
+    min-height: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
-.hello {
-    border: 20px solid red;
+@media (max-width: 767px) {
+    .fullscreen-bg {
+        background: url("../img/videoframe.jpg") black center center / cover no-repeat;
+    }
+    .fullscreen-bg__video {
+        display: none;
+    }
+}
+
+// Navigation
+
+.navbar {
+    background-color: gray;
+}
+
+.navbar__menu {
+    display: inline;
+    margin: 0;
+    list-style-type: none;
+    li {
+        display: inline-block;
+        padding: 1rem;
+    }
+}
+
+a {
+    &:link, &:visited {
+        color: black;
+    }
+    &:hover {
+        color: red;
+    }
+}
+
+hr {
+    // display: block;
+    border-top: 5px solid green;
+    min-width: 100%;
 }
