--- a/jordanbeach/templates/partials/hero.html
+++ b/jordanbeach/templates/partials/hero.html
@@ -1,16 +1,8 @@
-{% extends 'base.html' %}
 {% load static from staticfiles %}
-
-{% block title %}Home{% endblock %}
-
-{% block hero %}
+<section class="hero">
     <div class="fullscreen-bg">
         <video loop muted autoplay poster="{% static 'img/videoframe.jpg' %}" class="fullscreen-bg__video" id="js-video-controls">
             <source src="{% static 'video/pillowtime-HD.mp4' %}" type="video/mp4">
         </video>
     </div>
-{% endblock hero %}
-
-{% block content %}
-    <h1>Home</h1>
-{% endblock content %}
+</section>
