--- a/jordanbeach/templates/index.html
+++ b/jordanbeach/templates/index.html
@@ -3,14 +3,41 @@
 
 {% block title %}Home{% endblock %}
 
-{% block hero %}
+{% block content %}
+
     <div class="fullscreen-bg">
         <video loop muted autoplay poster="{% static 'img/videoframe.jpg' %}" class="fullscreen-bg__video" id="js-video-controls">
-            <source src="{% static 'video/pillowtime-HD.mp4' %}" type="video/mp4">
+            <source src="{% static 'video/airyscan.webm' %}" type="video/webm">
+            <source src="{% static 'video/airyscan.m4v' %}" type="video/mp4">
         </video>
     </div>
-{% endblock hero %}
 
-{% block content %}
-    <h1>Home</h1>
+    <div class="row">
+        <div class="small-12 columns">
+            <h1>Projects Hi</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="small-12 columns">
+            <h2>Subtitle</h2>
+            <p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Sed porttitor lectus nibh. Proin eget tortor risus. Donec sollicitudin molestie malesuada. Nulla porttitor accumsan tincidunt.</p>
+            <p>Donec sollicitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Donec rutrum congue leo eget malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla porttitor accumsan tincidunt.</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="small-4 columns" style="border: 1px solid black; height: 50px;">one
+        </div>
+        <div class="small-4 columns" style="border: 1px solid black">two
+        </div>
+        <div class="small-4 columns" style="border: 1px solid black">three
+        </div>
+    </div>
+    <div class="row">
+        <div class="small-12 columns">
+            <h2>Subtitle</h2>
+            p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Sed porttitor lectus nibh. Proin eget tortor risus. Donec sollicitudin molestie malesuada. Nulla porttitor accumsan tincidunt.</p>
+            <p>Donec sollicitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Donec rutrum congue leo eget malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla porttitor accumsan tincidunt.</p>
+        </div>
+    </div>
+
 {% endblock content %}
