--- a/jordanbeach/static_src/scss/_settings.scss
+++ b/jordanbeach/static_src/scss/_settings.scss
@@ -81,13 +81,13 @@ $body-font-color: $black;
 // // 2. Breakpoints
 // // --------------
 
-$breakpoints: (
-    small: 0,
-    medium: 640px,
-    large: 1024px,
-    xlarge: 1200px,
-    xxlarge: 1440px,
-);
+// $breakpoints: (
+//     small: 0,
+//     medium: 640px,
+//     large: 1024px,
+//     xlarge: 1200px,
+//     xxlarge: 1440px,
+// );
 $breakpoint-classes: (small medium large xlarge);
 
 // // 3. The Grid
@@ -109,24 +109,24 @@ $breakpoint-classes: (small medium large xlarge);
 // $header-font-weight: $global-weight-normal;
 // $header-font-style: normal;
 // $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
-$header-sizes: (
-    small: (
-        "h1": 24,
-        "h2": 20,
-        "h3": 19,
-        "h4": 18,
-        "h5": 17,
-        "h6": 16,
-    ),
-    medium: (
-        "h1": 48,
-        "h2": 40,
-        "h3": 31,
-        "h4": 25,
-        "h5": 20,
-        "h6": 16,
-    ),
-);
+// $header-sizes: (
+//     small: (
+//         "h1": 24,
+//         "h2": 20,
+//         "h3": 19,
+//         "h4": 18,
+//         "h5": 17,
+//         "h6": 16,
+//     ),
+//     medium: (
+//         "h1": 48,
+//         "h2": 40,
+//         "h3": 31,
+//         "h4": 25,
+//         "h5": 20,
+//         "h6": 16,
+//     ),
+// );
 // $header-color: inherit;
 // $header-lineheight: 1.4;
 // $header-margin-bottom: 0.5rem;
