--- a/jordanbeach/templates/cv.html
+++ b/jordanbeach/templates/cv.html
@@ -5,63 +5,88 @@
 
 {% block content %}
 <div class="row">
-    <div class="small-10 small-offset-1 xlarge-12 xlarge-offset-0 colums">
+    <div class="small-10 small-offset-1 xlarge-8 xlarge-offset-2 colums" style="border: 2px solid yellow">
         <h1>CV</h1>
-        <div class="position">
-            <h4>Current Position</h4>
-            <div class="row">
-                <div class="small-2 columns">
-                    <p><b>2011-Present</b></p>
+        <ul class="fa-ul">
+
+            <li><h4><i class="fa-li fa fa-hourglass-half" aria-hidden="true"></i>Current Position</h4></li>
+            <div class="row" >
+                <div class="small-3 columns">
+                    <h6>2011-Present</h6>
                 </div>
-                <div class="small-10 columns">
-                    <p><b>Post-doctoral Fellow</b>, National Heart, Lung and Blood Institute<br><i>Advisor: Dr. John Hammer III</i></p>
+                <div class="small-9 columns">
+                    <p><b>Post-doctoral Fellow</b>
+                    <br>National Heart, Lung, and Blood Institute, National Institutes of Health
+                    <br><i>Advisor: Dr. John Hammer III</i></p>
                 </div>
             </div>
-        </div>
-        <div class="education">
-            <h4>Education</h4>
+
+            <li><h4><i class="fa-li fa fa-graduation-cap" aria-hidden="true"></i>Education</h4>
             <div class="row">
-                <div class="small-2 columns">
+                <div class="small-3 columns">
                     <p><b>2004-2011</b></p>
                 </div>
-                <div class="small-10 columns">
-                    <p><b>Doctor of Philosophy, Physiology</b>, Department of Physiology and Biophysics, Case Western Reserve University<br><i>Advisor: Dr. Thomas Egelhoff</i></p>
+                <div class="small-9 columns">
+                    <p><b>Doctor of Philosophy, Physiology</b>
+                    <br>Department of Physiology and Biophysics, Case Western Reserve University
+                    <br><i>Advisor: Dr. Thomas Egelhoff</i></p>
                 </div>
-                <div class="small-2 columns">
+                <div class="small-3 columns">
                     <p><b>2000-2004</b></p>
                 </div>
-                <div class="small-10 columns">
-                    <p><b>Bachelor of Science, Biology</b>, University of Mount Union</p>
+                <div class="small-9 columns">
+                    <p><b>Bachelor of Science, Biology</b>
+                    <br>University of Mount Union</p>
                 </div>
             </div>
-        </div>
-        <div class="funding">
-            <h4>Funding and Fellowships</h4>
-        </div>
-        <div class="teaching">
-            <h4>Teaching Experience</h4>
-        </div>
-        <h4>Awards</h4>
-        <h4>Volunteer Work</h4>
-        <h4>Professional Affiliations</h4>
-        <h4>National Meetings</h4>
-        <h4>Poster Presentations</h4>
-        <h4>Invited Talks</h4>
+            </li>
 
-        <h4>Publications</h4>
-        {% for pub in publication_list %}
-        <div class="pub__item">
+            <li><h4><i class="fa-li fa fa-usd" aria-hidden="true"></i>Funding and Fellowships</h4></li>
+
+            <li><h4><i class="fa-li fa fa-pencil-square-o" aria-hidden="true"></i>Teaching Experience</h4>
+            <h5>Mentor</h5>
+            {% for ment in mentor_list %}
+                <p><b>{{ ment.year_start }}{% if ment.year_end %}-{{ ment.year_end }}{% endif %}</b> {{ ment.mentee_role}}- {{ ment.mentee }}</p>
+            {% endfor %}
+            <h5>Instructor</h5>
+            {% for inst in instructor_list %}
+                <p><b>{{ inst.year_start }}</b> "{{ inst.course_name }}"- {{ inst.course_venue }}</p>
+            {% endfor %}
+            </li>
+
+            <li><h4><i class="fa-li fa fa-trophy"></i>Awards</h4></li>
+            {% for award in award_list %}
+                {{ award }}
+            {% endfor %}
+
+            <li><h4><i class="fa-li fa fa-plus-square" aria-hidden="true"></i>Volunteer Work</h4></li>
+
+            <li><h4><i class="fa-li fa fa-briefcase" aria-hidden="true"></i>Professional Affiliations</h4></li>
+
+            <li><h4><i class="fa-li fa fa-users" aria-hidden="true"></i>National Meetings</h4></li>
+
+            <li><h4><i class="fa-li fa fa-picture-o" aria-hidden="true"></i>Poster Presentations</h4></li>
+            {% for poster in poster_list %}
+                {{ poster }}
+            {% endfor %}
+
+            <li><h4><i class="fa-li fa fa-comment fa-flip-horizontal" aria-hidden="true"></i>Invited Talks</h4></li>
+            {% for talk in talk_list %}
+                {{ talk }}
+            {% endfor %}
+
+            <li><h4><i class="fa-li fa fa-book" aria-hidden="true"></i>Publications</h4></li>
+            {% for pub in publication_list %}
             <a href="{{ pub.link }}" target="_blank">
                 <p>
                 {{ pub.authors }}
-                "{{ pub.title }}"
-                {{ pub.journal_name }}.
+                {{ pub.title }}
+                <i>{{ pub.journal_name }}.</i>
                 {{ pub.date|date:"Y M d;" }}{{ pub.journal_vol|default_if_none:"" }}{% if pub.journal_issue %}({{ pub.journal_issue|default_if_none:"" }}){% endif %}{{ pub.pages|default_if_none:"" }}
                 </p>
             </a>
-        </div>
-        {% endfor %}
-
-            </div>
-        </div>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
 {% endblock content %}
